--- a/src/main/resources/templates/view-community.html
+++ b/src/main/resources/templates/view-community.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
-    <title>UKIDS | 자유게시판</title>
+    <title>UKIDS | 커뮤니티</title>
     <!-- SEO Meta Tags
     <meta name="description" content="Cartzilla - Bootstrap E-commerce Template">
     <meta name="keywords" content="bootstrap, shop, e-commerce, market, modern, responsive,  business, mobile, bootstrap, html5, css3, js, gallery, slider, touch, creative, clean">
@@ -32,7 +32,6 @@
 
     <!--해당 페이지 css-->
 
-    
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
@@ -69,77 +68,80 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb breadcrumb-light fw-bold fs-md flex-lg-nowrap justify-content-center justify-content-lg-end">
               <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/}"><i class="ci-home"></i>유키즈</a></li>
-              <li class="breadcrumb-item"><a class="text-nowrap" th:href="|/community/${type}|">커뮤니티</a></li>
-              <li class="breadcrumb-item text-nowrap text-pink" id="tc" aria-current="page">상세보기</li>
+                <li class="breadcrumb-item text-nowrap text-white">커뮤니티</li>
+                <li th:if="${type == 'freeboard'}" class="breadcrumb-item text-nowrap text-pink" id="tc" aria-current="page">자유게시판</li>
+                <li th:unless="${type == 'freeboard'}" class="breadcrumb-item text-nowrap text-pink" id="tc" aria-current="page">공지사항</li>
             </ol>
           </nav>
         </div>
         <div class="row justify-content-center pt-4 pb-4">
           <div class="col-lg-8">
-            <h1 class="text-light text-center">상세보기</h1>
+            <h1 class="text-light text-center" th:if="${type == 'freeboard'}">자유게시판</h1>
+            <h1 class="text-light text-center" th:unless="${type == 'freeboard'}">공지사항</h1>
           </div>
         </div>
       </div>
     </section>
     
     <!-- 구분선 이미지-->
-    <div class="container-sm mt-4 mb-5">
+    <div class="container-sm my-4">
       <img src="/img/ukids/notice/1.png">
     </div>
     
     <!-- 게시판-->
-    <div class="container-sm box shadow rounded ">
+    <div class="container-sm box shadow rounded mb-5 pb-3">
     	<div class="m-3">
     		<!--  상세보기-->
-        	<div class="container-sm">
+        	<div class="container-sm px-0">
         		<div class="row">
-        			<div class="p-3">
-        				<div class="mt-3 mb-3">
-                  			<h3>[[${board.title}]]</h3>
-                  			
+        			<div class="py-2">
+        				<div class="mt-3 mb-2">
+                  			<h3 class="fw-bold">[[${board.title}]]</h3>
                 		</div>
-                		<div >[[${board.id}]]</div>
-                		<span class="mamamoo">조회</span><span class="ms-1 me-1">[[${board.readcount}]]</span>
-                		<span class="ms-2">[[${#dates.format(board.createDate ,'yyyy/MM/dd')}]]</span>
+                		<div class="row">
+	                		<div class="col-2">작성자 | [[${board.id}]]</div>
+	                		<div class="col-7"></div>
+	                		<div class="col-2 text-end">조회수 [[${board.readcount}]]</div>
+	                		<div class="col-1 text-end ps-0">[[${#dates.format(board.createDate ,'yyyy/MM/dd')}]]</div>
+                		
+                		</div>
         			</div>
         			<hr class="ta">
         		</div>
-        		<div style="text-align: right; margin: 20px">
-        			
+        		<div class="text-end mt-1">
+					첨부파일 <i class="ci-image me-3"></i>
         			<th:block th:if="${board.originalFileName != null}">
 						<a th:href="|javascript:fileDownload('${board.originalFileName}','${board.renamedFileName}')|" style="color: black;">
-							<img src="/images/file.png" width="20" height="20"/>
 							[[${board.originalFileName}]]				
 						</a>
-						<img alt="" style="width: 300px" th:src="|/board/file/${board.renamedFileName}|">
-						<script>
-							function fileDownload(oriname, rename) {
-								const url = "/board/fileDown";
-							
-								let oName = encodeURIComponent(oriname);
-								let rName = encodeURIComponent(rename);
-							
-								location.assign(url + "?oriname=" + oName + "&rename=" + rName);
-							}
-						</script>	
 					</th:block>
 					<th:block th:if="${board.originalFileName == null}">
 						<span> - </span>
 					</th:block>
         		</div>
-        		<div class="mt-2 box4">
+        		<div class="mt-1 box4">
         			<div>[[${board.content}]]</div>
         		</div>
-        		<div class="text-end mt-3" th:if="${session.loginMember != null && (session.loginMember.id == board.id)}">
-        			<button class="bbtn2 btn-outline-ppink" type="button" id="btnUpdate">수 정</button>
-        			<button class="bbtn2 btn-outline-ppink" type="button" id="btnDelete">삭 제</button>
-        			<button class="bbtn2 btn-outline-ppink" type="button" ><i class="ci-thumb-up-filled"></i></button>
+        		<div class="row align-items-center">
+        			<div class="col-6 text-start mt-3">
+        				<a class="btn-noline fs-lg fw-bold" th:href="|/community/${type}|"><i class="ci-reply fw-bold"></i> 목록으로</a>
+        			</div>
+	        		<div class="col-6 text-end mt-3">
+	        			<th:block th:if="${session.loginMember != null && (session.loginMember.id == board.id || session.loginMember.role == 'ROLE_ADMIN')}">
+		        			<button class="bbtn2 btn-outline-ppink" type="button" id="btnUpdate">수 정</button>
+		        			<button class="bbtn2 btn-outline-ppink" type="button" id="btnDelete">삭 제</button>
+	        			</th:block>
+	        			<th:block th:if="${session.loginMember != null && type == 'freeboard'}">
+	        				<th:block th:if="${good == 0}">
+			        			<button class="good-btn good-n" id="good" type="button" value="false"><i class="ci-thumb-up-filled"></i></button>
+	        				</th:block>
+	        				<th:block th:unless="${good == 0}">
+			        			<button class="good-btn good-y" id="good" type="button" value="true"><i class="ci-thumb-up-filled"></i></button>
+	        				</th:block>
+	        			</th:block>
+	        		</div>
         		</div>
-        		<div class="text-end mt-3" th:if="${session.loginMember != null && (session.loginMember.id != board.id)}">
-        			<button class="bbtn2 btn-outline-ppink" type="button" ><i class="ci-thumb-up-filled"></i></button>
-        		</div>
-        		<br>
-        		<div class="container-sm mt-3 mb-2">
+        		<div class="container-sm mt-3 mb-2" th:if="${type == 'freeboard'}">
         			<table>
         				<tr>
         					<th><b class="fs-3 ms-4">댓 글</b></th>
@@ -152,39 +154,52 @@
     	<!-- 상세보기 끝-->
     	
     	<!-- 댓글-->
-    	<div class="container-sm">
+    	<div class="container-sm mb-2" th:if="${type == 'freeboard'}">
     		<form action="/reply" method="post">
               <table>
                 <tr>
-                  <th><textarea class="box3 form-control" name="content" id="replyContent" placeholder=" 내용을 입력해주세요." required="required"></textarea></th>
-                  <th><button class="bbtn2 btn-outline-ppink ms-2" type="submit">등 록</button></th>
+                  <th><input type="hidden" name="boardNo" th:value="${board.boardNo}"></th>
+                  <th th:if="${session.loginMember != null}"><textarea class="box3 form-control" name="content" id="replyContent" placeholder=" 내용을 입력해주세요." required spellcheck="false"></textarea></th>
+                  <th th:unless="${session.loginMember != null}"><textarea class="box3 form-control" name="content" id="replyContent" placeholder="로그인 후 댓글을 작성할 수 있습니다. " disabled></textarea></th>
+                  <th th:if="${session.loginMember != null}"><button class="bbtn2 btn-outline-ppink ms-2" type="submit">등 록</button></th>
+                  <th th:unless="${session.loginMember != null}"><button class="bbtn2 btn-outline-ppink ms-2" type="submit" disabled>등 록</button></th>
                 </tr>
               </table>
           	</form>
-            <br>
-            <div style="text-align: center" >
-            	<a class="bbtn2 btn-outline-ppink " th:href="|/community/${type}|">글목록</a>
-            </div>
-            <br>
+	    	<div class="container-sm mt-3 px-5">
+	            <div class="reviewlist">
+	            	<th:block th:if="${#lists.size(replyList) == 0}">
+		              <div class="product-review mb-1 text-center">
+		                    등록된 리뷰가 없습니다.
+		              </div>
+	            	</th:block>
+	            	<th:block th:if="${replyList != null}">
+	            		<th:block th:each="reply : ${replyList}">
+			              <div class="product-review mb-1 border-bottom reviewlist reviewBox">
+			                <div class="mb-1 row align-items-center">
+			                    <div class="mt-2 col-2">
+			                      <h6 class="fs-sm mb-0">[[${reply.id}]]</h6><span class="fs-ms text-muted">[[${#dates.format(reply.createDate, 'yyyy-MM-dd')}]]</span>
+			                    </div>
+				                <div class="col-9 fs-md text-start">[[${reply.content}]]</div>
+				                <div class="col-1 text-end">
+				                	<th:block th:if="${session.loginMember != null && (session.loginMember.id == reply.id || session.loginMember.role == 'ROLE_ADMIN')}">
+					                  <button class="btn btn-icon btn-danger trashbtn py-1 px-2" th:onclick="deleteReply([[${reply.replyNo}]], [[${board.boardNo}]]);">
+					                    <i class="ci-trash"></i>
+					                  </button>
+				                	</th:block>
+				                </div>
+			                </div>
+			              </div>
+	            		</th:block>
+	            	</th:block>
+	            </div>
+	        </div>
     	</div>
     </div>
-    <br><br>
     </main>
   
   	<!-- 풋터 -->
 	<footer th:fragment="footer" th:replace="~{common :: footer}"></footer>
-    <!-- Toolbar for handheld devices (NFT Marketplace)-->
-    <div class="handheld-toolbar">
-      <div class="d-table table-layout-fixed w-100">
-      <a class="d-none handheld-toolbar-item" href="#vendor-sidebar" data-bs-toggle="offcanvas">
-      <span class="handheld-toolbar-icon">
-      <i class="ci-sign-in"></i>
-      </span>
-      <span class="handheld-toolbar-label">Sidebar</span>
-      </a>
-      <a class="d-table-cell handheld-toolbar-item" href="#signin-modal" data-bs-toggle="modal"><span class="handheld-toolbar-icon"><i class="ci-user"></i></span><span class="handheld-toolbar-label">Account</span></a><a class="d-table-cell handheld-toolbar-item" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" onclick="window.scrollTo(0, 0)"><span class="handheld-toolbar-icon"><i class="ci-menu"></i></span><span class="handheld-toolbar-label">Menu</span></a><a class="d-table-cell handheld-toolbar-item" href="nft-connect-wallet.html"><span class="handheld-toolbar-icon"><i class="ci-wallet"></i></span><span class="handheld-toolbar-label text-nowrap">Connect wallet</span></a>
-      </div>
-    </div>
     <!-- Back To Top Button-->
     <a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon ci-arrow-up">   </i></a>
     
@@ -196,26 +211,90 @@
     <script src="/vendor/chartist/dist/chartist.min.js"></script>
     <!-- Main theme script-->
     <script src="js/theme.min.js"></script>
-    <script src="js/index.js"></script>
-  </body>
-</html>
-
-<script>
-	$(document).ready(() => {
-		$("#btnUpdate").on("click", (e) => {
-			location.href = "/community/update?no=[[${board.boardNo}]]&type=[[${type}]]";
+    
+	<script>
+		$(document).ready(() => {
+			$("#btnUpdate").on("click", (e) => {
+				location.href = "/community/update?no=[[${board.boardNo}]]&type=[[${type}]]";
+			});
+			
+			$("#btnDelete").on("click", (e) => {
+				if(confirm("정말로 게시글을 삭제 하시겠습니까?")) {
+					location.replace("/community/delete?boardNo=[[${board.boardNo}]]&type=[[${type}]]");
+				}
+			});
 		});
 		
-		$("#btnDelete").on("click", (e) => {
-			if(confirm("정말로 게시글을 삭제 하시겠습니까?")) {
-				location.replace("/community/delete?boardNo=[[${board.boardNo}]]&type=[[${type}]]");
-			}
+		function fileDownload(oriname, rename) {
+			const url = "/community/fileDown";
+		
+			let oName = encodeURIComponent(oriname);
+			let rName = encodeURIComponent(rename);
+		
+			location.assign(url + "?oriname=" + oName + "&rename=" + rName);
+		}
+		
+		function deleteReply(replyNo, boardNo){
+			var url = "/replyDel?replyNo=";
+			var requestURL = url + replyNo +"&boardNo=" + boardNo;
+			location.replace(requestURL);
+		}
+	</script>
+	<script th:inline="javascript" th:if="${session.loginMember != null}">
+		$(document).ready(function() {
+			var no = /*[[${board.boardNo}]]*/{};
+		    var memberNo = /*[[${session.loginMember.memberNo}]]*/{};
+		    
+		    var isGood = null;
+		    $('#good').click(function() {
+		    	if($('#good').val() == 'false') {
+		    		isGood = true;
+		    	} else {
+		    		isGood = false;
+		    	}
+		    	
+		    	if(isGood == true) {
+		    		$.ajax({
+		    			type: "post",
+		    			url: "/community/addGood",
+		    			data: {no, memberNo},
+		    			success:
+		    				(data) => {
+		    					if(data.add === true) {
+		    						$('#good').attr('class', 'good-btn good-y');
+		    						$('#good').attr('value', 'true');
+		    					} else {
+		    						alert("좋아요 실패하였습니다.");
+		    					}
+		    				},
+		    			error:
+		    				(e) => {
+		    					console.log(e);
+		    				}
+		    		});
+		    	} else {
+		    		$.ajax({
+		    			type: "post",
+		    			url: "/community/deleteGood",
+		    			data: {no, memberNo},
+		    			success:
+		    				(data) => {
+		    					if(data.remove === true) {
+		    						$('#good').attr('class', 'good-btn good-n');
+		    						$('#good').attr('value', 'false');
+		    					} else {
+		    						alert("좋아요 취소에 실패하였습니다.");
+		    					}
+		    				},
+		    			error:
+		    				(e) => {
+		    					console.log(e);
+		    				}
+		    		});
+		    		
+		    	}
+		    });
 		});
-	});
-	
-	function deleteReply(replyNo, boardNo){
-		var url = "/replyDel?replyNo=";
-		var requestURL = url + replyNo +"&boardNo=" + boardNo;
-		location.replace(requestURL);
-	}
-</script>
+	</script>
+  </body>
+</html>
