메인페이지 수정 / 김성호 / 02-16 15:44 [주요 내용] 	- 메인페이지 빠른 학교 찾기 -> 주변 어린이집/유치원 찾기로 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -129,7 +129,7 @@
       <section id="school-list" class="mb-lg-5">
         <div class="container px-0" id="map">
           <div class="row g-0">
-            <span class="ps-1" style="font-weight: 700;">빠른 학교 찾기</span>
+            <span class="ps-1" style="font-weight: 700;">주변 어린이집/유치원 찾기</span>
             <div class="d-flex align-items-center justify-content-between mb-sm-3 mb-2">
               <h2 class="h3 mb-0"><span style="font-weight: 700;">[[${address}]]</span> 어린이집·유치원 찾기</h2>
               <a class="btn btn-outline-accent ms-3" href="/nursery-main">더 보기<i class="ci-arrow-right ms-2"></i></a>
