불편사항 신고조회 수정 / 조규완 / 02-16 16:50 [상세내용] 불편사항 신고 조회 - admin : 삭제기능 추가

--- a/src/main/resources/templates/mypage-4.html
+++ b/src/main/resources/templates/mypage-4.html
@@ -558,6 +558,7 @@
 									</th:block>
 									<th:block th:if="${nclaim.confirm == 'Y'}">
 									<td class="py-3 cgw9">
+										<button class="badge bg-secondary m-0 cgw30" th:onclick="nclaimDelete([[${nclaim.knNo}]], [[${nclaim.no}]]);">삭제</button>
 									</td>
 									</th:block>
 								</tr>
@@ -638,6 +639,7 @@
 									</th:block>
 									<th:block th:if="${nclaim.confirm == 'Y'}">
 									<td class="py-3 cgw9">
+										<button class="badge bg-secondary m-0 cgw30" th:onclick="kclaimDelete([[${nclaim.knNo}]], [[${nclaim.no}]]);">삭제</button>
 									</td>
 									</th:block>
 								</tr>
