--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -286,6 +286,7 @@
 			                    
 								<label class="form-label" for="account-childAge">자녀 나이</label>
 								<br> 
+								<th:block th:if="${session.loginMember.kidAge != null}">
 								<input class="form-check-input" type="checkbox" name="kidAge" value="0세"
 									th:checked="${#arrays.contains(session.loginMember.kidAge, '0세')  ? 'checked' : null}" id="subscribe_me">&nbsp; 
 								<label class="form-check-label" for="account-childAge">0</label>&nbsp;&nbsp;&nbsp;
@@ -307,6 +308,23 @@
 								<input class="form-check-input" type="checkbox" name="kidAge" value="6세"
 									th:checked="${#arrays.contains(session.loginMember.kidAge, '6세')  ? 'checked' : null}" id="subscribe_me">&nbsp; 
 								<label class="form-check-label" for="account-childAge">6</label>
+								</th:block>
+								<th:block th:if="${session.loginMember.kidAge == null}">
+								<input class="form-check-input" type="checkbox" name="kidAge" value="0세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">0</label>&nbsp;&nbsp;&nbsp;
+								<input class="form-check-input" type="checkbox" name="kidAge" value="1세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">1</label>&nbsp;&nbsp;&nbsp;
+								<input class="form-check-input" type="checkbox" name="kidAge" value="2세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">2</label>&nbsp;&nbsp;&nbsp;
+								<input class="form-check-input" type="checkbox" name="kidAge" value="3세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">3</label>&nbsp;&nbsp;&nbsp;
+								<input class="form-check-input" type="checkbox" name="kidAge" value="4세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">4</label>&nbsp;&nbsp;&nbsp;
+								<input class="form-check-input" type="checkbox" name="kidAge" value="5세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">5</label>&nbsp;&nbsp;&nbsp;
+								<input class="form-check-input" type="checkbox" name="kidAge" value="6세" id="subscribe_me">&nbsp; 
+								<label class="form-check-label" for="account-childAge">6</label>
+								</th:block>
 							</div>
 							</th:block>
 							<!--선생님-->
