게시판 수정 / 이다영 / 02-17 14:02
[주요 내용]

- 글 수정시 파일업로드 오류 수정
- 글 보기에서 내용출력부분 줄바꿈 적용 안되서 div -> textarea로 변경

--- a/src/main/resources/static/css/view.css
+++ b/src/main/resources/static/css/view.css
@@ -149,3 +149,12 @@
 #tc{
     color: #fc6c93;
 }
+.hei:focus {
+    border: 0px;
+    box-shadow: none;
+}
+
+#textarea-input {
+	border: 0px;
+    background-color: #FFF;
+}
