--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -119,7 +119,7 @@
               </tr>
               <tr>
                 <th class=" align-middle text-center">첨부파일</th>
-                <th class="col-5 text-center"><input class="form-control" type="file" name="upfile" id="file-input"></th>
+                <th class="col-5 text-center"><input class="form-control" type="file" name="reloadFile" id="file-input"></th>
               </tr>
               <tr th:if="${board.originalFileName != null}">
               	<th></th>
