--- a/src/main/resources/templates/view-community.html
+++ b/src/main/resources/templates/view-community.html
@@ -120,7 +120,7 @@
 					</th:block>
         		</div>
         		<div class="mt-1 box4">
-        			<div>[[${board.content}]]</div>
+        			<textarea class="form-control hei" id="textarea-input" rows="5" name="content" readonly spellcheck="false" >[[${board.content}]]</textarea>
         		</div>
         		<div class="row align-items-center">
         			<div class="col-6 text-start mt-3">
