--- a/src/main/resources/static/css/hospital-main.css
+++ b/src/main/resources/static/css/hospital-main.css
@@ -41,3 +41,12 @@
 .page>.page-link {
     box-shadow: 0 .5rem 1.125rem -0.425rem rgba(252, 108, 147, .9)
 }
+
+
+
+/* 23.02.19 수정 */
+.card-img-top img {
+	width: 295px;
+	height: 220px;
+	object-fit: cover;
+}
