--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -114,13 +114,13 @@
 	                    <th:block th:if="${param.build != null}">
 	                      <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
 	                        <div class="form-check">
-	                          <input class="form-check-input" name="build" type="checkbox" id="build1" value="공립" th:checked="${#strings.contains(param.build,'공립')} ? 'checked' : null ">
+	                          <input class="form-check-input" name="build" type="checkbox" id="build1" value="public" th:checked="${#strings.contains(param.build,'public')} ? 'checked' : null ">
 	                          <label class="form-check-label widget-filter-item-text" for="build1">국공립</label>
 	                        </div>
 	                      </li>
 	                      <li class="widget-filter-item d-flex justify-content-between align-items-center mb-1">
 	                        <div class="form-check">
-	                          <input class="form-check-input" name="build" type="checkbox" id="build2" value="민간" th:checked="${#strings.contains(param.build,'민간')} ? 'checked' : null ">
+	                          <input class="form-check-input" name="build" type="checkbox" id="build2" value="private" th:checked="${#strings.contains(param.build,'private')} ? 'checked' : null ">
 	                          <label class="form-check-label widget-filter-item-text" for="build2">사립</label>
 	                        </div>
 	                      </li>
