어린이집, 유치원 / 이다영 / 02-20 13:31
[주요내용]

- 어린이집 검색에서 로그인 안했을 경우 찜 불가 함수 추가
- 어린이집/유치원 상세페이지 댓글삭제 함수 타임리프 문법 수정

--- a/src/main/resources/templates/kinder-detail.html
+++ b/src/main/resources/templates/kinder-detail.html
@@ -1178,7 +1178,7 @@ $('#compareButton').click(function() {
 
 // 리뷰 삭제
 function deleteReview(no) {
-	var url = "/kinder-deleteReview?no=" + no + "&kinNo=" + /*[[${kinder.kinNo}]]*/{} + "&i=" + /*[[${i}]]*/{};
+	var url = "/kinder-deleteReview?no=" + no + "&kinNo=[[${kinder.kinNo}]]&i=[[${i}]]";
 	if(confirm("댓글을 삭제 하시겠습니까?")) {
 		location.replace(url);
 	}
