놀이시설 / 이다영 / 02-20 15:06
[주요내용]

- 주소 수정

--- a/src/main/resources/templates/playground.html
+++ b/src/main/resources/templates/playground.html
@@ -197,10 +197,10 @@
 			var searchList = [
 				/*[# th:each="item : ${list}"]*/
 			  {
-					no: /*[[${item.NO}]]*/{},
+				no: /*[[${item.NO}]]*/{},
 			    type: /*[[${item.divM}]]*/{},
 			    name: /*[[${item.pgName}]]*/{},
-			    address: /*[[${item.pgAddr1} + ' ' + ${item.pgAddr2}]]*/{},
+			    address: /*[[${item.pgAddr1}]]*/{},
 			  },
 			  /*[/]*/
 			];
